fix layout shift problems

--- a/components/global-styles/main.scss
+++ b/components/global-styles/main.scss
@@ -34,23 +34,18 @@ h2 {
 h3,
 blockquote {
   @include font-bold;
-  font-size: 4vw;
-  padding-top: 1.5vw;
-  padding-bottom: 1.5vw;
+  font-size: 3.5vw;
+  padding-top: 2vw;
+  padding-bottom: 2vw;
 }
 
 p {
   @include font-regular;
-  font-size: 3vw;
+  font-size: 3.5vw;
   padding-top: 1vw;
   padding-bottom: 1vw;
 }
 
-@media only screen and (max-width: 700px) {
-  p {
-    font-size: 4vw;
-  }
-}
 
 a {
   text-decoration: underline;
